--- a/index.html
+++ b/index.html
@@ -17,25 +17,24 @@
     <div class="titular">
         <span><h1>Preguntanding</h1></span>
     </div>
-    <div class="cuestionario">
+    <div class="cuestionario" id="caja">
         
-        <div class="cajaPregunta">
-            <h3 class="pregunta" id="pregunta">¿Cuál de los siguientes deportistas NO ha sido futbolista?</h3>
+        <div class="cajaPregunta" id="preg">
+            <h3 class="pregunta" id="pregunta">¿Cuál dexcxcxcxcx sdsdsds dsdscxcxcxcx los siguientes deportistas NO ha sido futbolista?</h3>
             
             <div class="respuestas"><p class="res" id="res1"> 1. Ruben Baraja </p>
                 <p class="res" id="res2">2. Thierry Henry </p>
                 <p class="res" id="res3"> 3. Rubens Barrichello </p>
                 <p class="res" id="res4"> 4. David Beckham </p></div>
 
-            <div class="cajaBotones"></div>
+            <div class="cajaBotones">
                 <p class="txtRespuesta">Elegi tu respuesta y toca el numero que le corresponda:</p>
-                <p>
-                <button class="previous"><i class="fas fa-chevron-circle-left"></i></button>
+                <p class="botones">
                 <input type="button" value="1" name='incorrecto' class="option">
                 <input type="button" value="2" name='incorrecto' class="option">
                 <input type="button" value="3" name='correcto' class="option">
                 <input type="button" value="4" name='incorrecto' class="option">
-                <button class="next"><i class="fas fa-chevron-circle-right"></i></button></p>
+                </p>
             </div>
         </div>
 
