--- a/index.html
+++ b/index.html
@@ -11,21 +11,23 @@
     <link href="https://fonts.googleapis.com/css?family=Courgette&display=swap" rel="stylesheet">
     <!--FontAwesome-->
     <script src="https://kit.fontawesome.com/296ea6cf27.js"></script>
+    <!-- Animate CSS-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
 
 </head>
 <body>
-    <div class="titular">
+    <div class="titular animated pulse slower">
         <span><h1>Preguntanding</h1></span>
     </div>
-    <div class="cuestionario" id="caja">
+    <div class="cuestionario animated bounceInLeft fast" id="caja">
         
         <div class="cajaPregunta" id="preg">
-            <h3 class="pregunta" id="pregunta">¿Cuál dexcxcxcxcx sdsdsds dsdscxcxcxcx los siguientes deportistas NO ha sido futbolista?</h3>
+            <h3 class="pregunta" id="pregunta">¿Cual de los siguientes animales NO es herbivoro?</h3>
             
-            <div class="respuestas"><p class="res" id="res1"> 1. Ruben Baraja </p>
-                <p class="res" id="res2">2. Thierry Henry </p>
-                <p class="res" id="res3"> 3. Rubens Barrichello </p>
-                <p class="res" id="res4"> 4. David Beckham </p></div>
+            <div class="respuestas"><p class="res" id="res1"> 1. Cebra </p>
+                <p class="res" id="res2">2. Ciervo </p>
+                <p class="res" id="res3"> 3. Zorro </p>
+                <p class="res" id="res4"> 4. Canguro </p></div>
 
             <div class="cajaBotones">
                 <p class="txtRespuesta">Elegi tu respuesta y toca el numero que le corresponda:</p>
