cambios diseño mobile
-

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                 <p class="res" id="res2">2. Ciervo </p>
                 <p class="res" id="res3"> 3. Zorro </p>
                 <p class="res" id="res4"> 4. Canguro </p></div>
-
+                
             <div class="cajaBotones">
-                <p class="txtRespuesta">Elegi tu respuesta y toca el numero que le corresponda:</p>
+                <p class="txtRespuesta">Toca el numero de tu respuesta:</p>
                 <p class="botones">
                 <input type="button" value="1" name='incorrecto' class="option">
                 <input type="button" value="2" name='incorrecto' class="option">
